--- a/app/content/community_support.mdx
+++ b/app/content/community_support.mdx
@@ -1,14 +1,11 @@
 We value user feedback and suggestions and aim to provide better products and services for you. Additionally, we encourage users to participate in community interactions to drive the development of the ChatGPT For WhatsApp service. The following are the instructions for user feedback and community support.
 
 ## 10.1 Feedback and Suggestions
-
 If you encounter any issues or have improvement suggestions during use, please feel free to provide feedback through the following methods:
 
-You can join our plugin WeChat group through the official website, or you can also provide feedback to us via email: contact@aoq.me
-We are very grateful for your feedback, which will help us continuously improve our products and services.
+You can join our plugin WeChat group through the official website, or you can also provide feedback to us via email: contact@aoq.me We are very grateful for your feedback, which will help us continuously improve our products and services.
 
 ## 10.2 Technical Support
-
 If you need technical support, please provide a detailed description of the issue and contact us through the WeChat group or email: contact@aoq.me, so that we can solve your problem more effectively.
 
 We are committed to providing high-quality service to our users and look forward to your participation and feedback. Let's work together to make ChatGPT For WhatsApp a more powerful and intelligent chat robot service.
