--- a/app/content/how_to_use.mdx
+++ b/app/content/how_to_use.mdx
@@ -1,33 +1,75 @@
-## 2.1 Installing the Plugin
-To start using the ChatGPT For WhatsApp plugin, first complete the installation of the plugin:
 
-Go to the https://aoq.com website, click on the button [Add to Chrome] on the homepage.
-Add the plugin to the Chrome extensions, click [add to Chrome] to install.
-After installation, turn on the plugin icon. Then open the plugin and see the ChatGPT For WhatsApp main page of the plugin.
-Once installed, you can start setting up the plugin.
-> Note: You can download the extension,and then  according to your usage habits, install it in other browsers such as Edge, Firefox, etc.
-
-## 2.2 Configuring the Plugin
+## 2.1 Configuring the Plugin
 Before using the plugin, please configure it first:
 
-1. Open the plugin and click the "Settings" menu.
-2. Find the "Options" in the settings menu and click to enter.
-3. In the plugin setting page, select the AI source and click the "Save" button to make the changes effective. After configuring, you can start interacting with ChatGPT in WeChat.
-## 2.3 Interacting with ChatGPT
-It is very easy to interact with ChatGPT using the plugin:
+### 2.1.1 Open the plugin and click the "Settings" menu.
 
-Open any chat window in the client WeChat (mobile WeChat or desktop WeChat), either in a group chat or a private chat.
-In the chat window, enter: @Login WeChat nickname + the topic or question you want to discuss with ChatGPT, then send.
-css
+![Open the plugin and click the "Settings" menu](/step1.png)
+
+### 2.1.2 Setting AI Source
+
+![Setting AI Source](/aisource.png)
+
+- You can test whether the link is normal by clicking on the test link.
+- Save configuration.
+
+#### ChatGPT web
+![ChatGPT web](/gptweb.png)
+- You are free to switch between models. If you are a ChatGPTPlus member, you can choose GPT-4 as your model. 
+> Please note that if you choose to use ChatGPT web, you need to log in to `https://chat.openai.com/chat`.
+
+#### ChatGPT API
+![ChatGPT API-Key](/apikey.png)
+- Method to obtain an API key: Go to `https://platform.openai.com/account/api-keys`, create an API key, and copy it.
+- Correct API key: `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`
+- If you have access to GPT-4.0, you can choose to use the GPT-4.0 model.
+
+#### BingChat and Google Bard
+If you want to use BingChat and Google Bard as your AI sources, you can consider upgrading to our paid version, which works the same way as ChatGPT Web.
+
+### 2.1.3 Set up your BOT
+
+![Set up your BOT](/setbot.png)
+
+## 2.2 Interacting with ChatGPT
+
+### 2.2.1 Open WhatsAPP website
+![Open WhatsAPP website](/openwhatsapp.png)
+
+### 2.2.2 Switch AI Source
+![Switch AI Source](/connected.png)
+
+When the plugin page shows `"connected"`, it means that the connection has been successful and you can start using it in the WhatsApp application.
+
+## 2.3 How to Use on WhatsApp
+
+### 2.3.1 In a WhatsApp Group
+
+Group members in the group need to mention the bot to ask a question. 
 ```
 @your-WhatsApp-nickname  Hello
 ```
 ChatGPT will generate a reply based on your input and display it in the chat window.
 
+![In a WhatsApp Group](/whatsappgroup.jpg)
+
+### 2.3.2 Chatting with one-on-one
+Your Friend can ask the question directly and receive a response. 
+```
+How to find inspiration for writing?
+```
+Due to slight differences in methods between different versions, if there is no response, you can add the command '@gpt' in front of your question. 
+
+### 2.3.3 chat with your own account
+you can ask the question by adding '@gpt' before it.
+
+```
+@gpt How to create an effective time management plan? 
+```
+
 Note:
-The topic or question to be asked should be greater than 2 characters.
-Ask yourself the question in your personal window to view the reply.
-You can interact with ChatGPT anytime to get interesting and practical information.
+- The topic or question to be asked should be greater than 2 characters.
+- You can interact with ChatGPT anytime to get interesting and practical information.
 
 ## 2.4 Updating and Uninstalling the Plugin
 We will regularly release plugin updates to fix issues and add new features. Please check for updates regularly to ensure that you are using the latest version of the plugin.
