update privacy policy

--- a/app/content/privacy_policy.mdx
+++ b/app/content/privacy_policy.mdx
@@ -1,39 +1,43 @@
-Effective Date: April 7, 2023
+Effective Date: April 12, 2023
 
 Welcome to ChatGPT for Social (hereinafter referred to as "the Service"). The Service is provided by AOQ.ME. Before using the Service, please carefully read this Privacy Policy. By using the Service, you agree to the terms and conditions of this Privacy Policy. If you do not agree with these terms and conditions, please do not use the Service.
+
+This privacy policy applies to the following products:
+ChatGPT for WhatsApp
+ChatGPT for Wechat.
 
 ## 11.1 Information Collection
 In order to provide better services, we collect the following types of information:
 
-### 1.1 User-provided Information: When using the Service, you may need to provide some personal information, such as phone number, name, email address, etc.
+1.1 User-provided Information: When using the Service, you may need to provide some personal information, such as phone number, name, email address, etc.
 
-### 1.2 Automatically Collected Information: When you use the Service, we may automatically collect certain information, such as device information, operating system, IP address, browser type, usage time, etc.
+1.2 Automatically Collected Information: When you use the Service, we may automatically collect certain information, such as device information, operating system, IP address, browser type, usage time, etc.
 
-### 1.3 Information from Third-party Sources: We may obtain information about you from third-party sources in order to provide you with better services.
+1.3 Information from Third-party Sources: We may obtain information about you from third-party sources in order to provide you with better services.
 
 ## 11.2 Information Use
 We may use the collected information for the following purposes:
 
-### 2.1 Provide, maintain, and improve our services;
+2.1 Provide, maintain, and improve our services;
 
-### 2.2 Personalize your experience and provide customized content and suggestions;
+2.2 Personalize your experience and provide customized content and suggestions;
 
-### 2.3 Identify and resolve technical issues;
+2.3 Identify and resolve technical issues;
 
-### 2.4 Protect the security of the Service and its users;
+2.4 Protect the security of the Service and its users;
 
-### 2.5 Understand the usage of the Service and conduct data analysis.
+2.5 Understand the usage of the Service and conduct data analysis.
 
 ## 11.3 Information Sharing
 We will not sell, rent, or otherwise disclose your personal information to third parties unless one of the following conditions is met:
 
-### 3.1 With your consent;
+3.1 With your consent;
 
-### 3.2 In order to comply with laws, regulations, court orders, or government requests;
+3.2 In order to comply with laws, regulations, court orders, or government requests;
 
-### 3.3 To detect, prevent, or resolve fraud, security, or technical issues;
+3.3 To detect, prevent, or resolve fraud, security, or technical issues;
 
-### 3.4 To protect the rights, property, or safety of AOQ.ME, the Service, or its users.
+3.4 To protect the rights, property, or safety of AOQ.ME, the Service, or its users.
 
 ## 11.4 Information Security
 We are committed to protecting the security of your personal information and take reasonable technical and organizational measures to protect your information from unauthorized access, use, or disclosure. However, please note that no data transmission or storage method can guarantee 100% security.
